// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots works for bedford 1`] = `
<div
  style={
    {
      "background": "#333",
      "width": "100%",
    }
  }
>
  <div
    style={
      {
        "background": "white",
        "border": "5px solid #333",
        "display": "flex",
        "flexDirection": "column",
        "height": 768,
        "width": 1024,
      }
    }
  >
    <div
      className="SchoolDisciplineDashboard EscapeListener"
      onKeyDown={[Function]}
      style={
        {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <div
        style={
          {
            "display": "flex",
            "flex": 1,
            "flexDirection": "column",
            "paddingLeft": 10,
            "paddingRight": 10,
            "width": "100%",
          }
        }
      >
        <div
          className="SectionHeading"
          style={
            {
              "borderBottom": "1px solid #333",
              "padding": 10,
            }
          }
        >
          <h4
            style={
              {
                "color": "black",
                "display": "inline",
              }
            }
          >
            Recent Discipline incidents at 
            Arthur D. Healey
          </h4>
        </div>
        <div
          style={
            {
              "borderBottom": "1px solid #ccc",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "padding": 10,
              "width": "100%",
            }
          }
        >
          <div
            className="FilterBar"
            style={
              {
                "display": "flex",
                "justifyContent": "center",
              }
            }
          >
            <div
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <span
                style={
                  {
                    "display": "inline-block",
                    "marginRight": 10,
                  }
                }
              >
                Filter by
              </span>
              <div
                className="Select is-searchable Select--single"
              >
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    {
                      "marginLeft": 10,
                      "width": "10em",
                    }
                  }
                >
                  <div
                    className="Select-multi-value-wrapper"
                    id="react-select-60--value"
                  >
                    <div
                      className="Select-placeholder"
                    >
                      Incident Code...
                    </div>
                    <div
                      className="Select-input"
                      style={
                        {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-activedescendant="react-select-60--value"
                        aria-expanded="false"
                        aria-haspopup="false"
                        aria-owns=""
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        style={
                          {
                            "boxSizing": "content-box",
                            "width": "5px",
                          }
                        }
                        value=""
                      />
                      <div
                        style={
                          {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
              <div
                className="Select is-searchable Select--single"
              >
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    {
                      "marginLeft": 10,
                      "width": "8em",
                    }
                  }
                >
                  <div
                    className="Select-multi-value-wrapper"
                    id="react-select-61--value"
                  >
                    <div
                      className="Select-placeholder"
                    >
                      Grade...
                    </div>
                    <div
                      className="Select-input"
                      style={
                        {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-activedescendant="react-select-61--value"
                        aria-expanded="false"
                        aria-haspopup="false"
                        aria-owns=""
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        style={
                          {
                            "boxSizing": "content-box",
                            "width": "5px",
                          }
                        }
                        value=""
                      />
                      <div
                        style={
                          {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            className="FilterBar"
            style={
              {
                "display": "flex",
                "justifyContent": "center",
              }
            }
          >
            <div
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <span
                style={
                  {
                    "display": "inline-block",
                    "marginRight": 10,
                  }
                }
              >
                Filter by
              </span>
              <div
                className="Select has-value Select--single"
              >
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    {
                      "marginLeft": 10,
                      "width": "10em",
                    }
                  }
                >
                  <div
                    className="Select-multi-value-wrapper"
                    id="react-select-62--value"
                  >
                    <div
                      className="Select-value"
                    >
                      <span
                        aria-selected="true"
                        className="Select-value-label"
                        id="react-select-62--value-item"
                        role="option"
                      >
                        Last 45 days
                      </span>
                    </div>
                    <div
                      aria-activedescendant="react-select-62--value"
                      aria-disabled="false"
                      aria-expanded={false}
                      aria-owns=""
                      className="Select-input"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      role="combobox"
                      style={
                        {
                          "border": 0,
                          "display": "inline-block",
                          "width": 1,
                        }
                      }
                      tabIndex={0}
                    />
                  </div>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            {
              "display": "flex",
              "flex": "1",
              "padding": 10,
            }
          }
        >
          <div
            style={
              {
                "alignContent": "flex-start",
                "display": "flex",
                "width": 450,
              }
            }
          >
            <div
              className="StudentsTable"
              style={
                {
                  "display": "flex",
                  "flex": 1,
                  "flexDirection": "column",
                  "marginBottom": 10,
                  "marginTop": 10,
                }
              }
            >
              <div
                style={
                  {
                    "flex": 1,
                  }
                }
              />
              <div
                style={
                  {
                    "paddingTop": 10,
                  }
                }
              >
                Total Incidents:  1
              </div>
            </div>
          </div>
          <div
            style={
              {
                "display": "flex",
                "flex": "1",
                "flexDirection": "column",
                "paddingLeft": 20,
              }
            }
          >
            <div
              style={
                {
                  "display": "flex",
                  "justifyContent": "center",
                  "marginTop": "20px",
                }
              }
            >
              <div
                style={
                  {
                    "alignSelf": "center",
                    "fontSize": "18px",
                    "marginRight": "10px",
                  }
                }
              >
                Break down by:
              </div>
              <div
                className="Select has-value is-searchable Select--single"
              >
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    {
                      "width": "200px",
                    }
                  }
                >
                  <div
                    className="Select-multi-value-wrapper"
                    id="react-select-63--value"
                  >
                    <div
                      className="Select-value"
                    >
                      <span
                        aria-selected="true"
                        className="Select-value-label"
                        id="react-select-63--value-item"
                        role="option"
                      >
                        Day & Time
                      </span>
                    </div>
                    <div
                      className="Select-input"
                      style={
                        {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-activedescendant="react-select-63--value"
                        aria-expanded="false"
                        aria-haspopup="false"
                        aria-owns=""
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        style={
                          {
                            "boxSizing": "content-box",
                            "width": "5px",
                          }
                        }
                        value=""
                      />
                      <div
                        style={
                          {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              className="DisciplineScatterPlot"
              id="String"
              style={
                {
                  "display": "flex",
                  "flex": 1,
                  "padding": 10,
                  "width": "100%",
                }
              }
            >
              <div
                className="HighchartsWrapper"
                style={
                  {
                    "flex": 1,
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshots works for demo 1`] = `
<div
  style={
    {
      "background": "#333",
      "width": "100%",
    }
  }
>
  <div
    style={
      {
        "background": "white",
        "border": "5px solid #333",
        "display": "flex",
        "flexDirection": "column",
        "height": 768,
        "width": 1024,
      }
    }
  >
    <div
      className="SchoolDisciplineDashboard EscapeListener"
      onKeyDown={[Function]}
      style={
        {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <div
        style={
          {
            "display": "flex",
            "flex": 1,
            "flexDirection": "column",
            "paddingLeft": 10,
            "paddingRight": 10,
            "width": "100%",
          }
        }
      >
        <div
          className="SectionHeading"
          style={
            {
              "borderBottom": "1px solid #333",
              "padding": 10,
            }
          }
        >
          <h4
            style={
              {
                "color": "black",
                "display": "inline",
              }
            }
          >
            Recent Discipline incidents at 
            Arthur D. Healey
          </h4>
        </div>
        <div
          style={
            {
              "borderBottom": "1px solid #ccc",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "padding": 10,
              "width": "100%",
            }
          }
        >
          <div
            className="FilterBar"
            style={
              {
                "display": "flex",
                "justifyContent": "center",
              }
            }
          >
            <div
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <span
                style={
                  {
                    "display": "inline-block",
                    "marginRight": 10,
                  }
                }
              >
                Filter by
              </span>
              <div
                className="Select is-searchable Select--single"
              >
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    {
                      "marginLeft": 10,
                      "width": "10em",
                    }
                  }
                >
                  <div
                    className="Select-multi-value-wrapper"
                    id="react-select-48--value"
                  >
                    <div
                      className="Select-placeholder"
                    >
                      Incident Code...
                    </div>
                    <div
                      className="Select-input"
                      style={
                        {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-activedescendant="react-select-48--value"
                        aria-expanded="false"
                        aria-haspopup="false"
                        aria-owns=""
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        style={
                          {
                            "boxSizing": "content-box",
                            "width": "5px",
                          }
                        }
                        value=""
                      />
                      <div
                        style={
                          {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
              <div
                className="Select is-searchable Select--single"
              >
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    {
                      "marginLeft": 10,
                      "width": "8em",
                    }
                  }
                >
                  <div
                    className="Select-multi-value-wrapper"
                    id="react-select-49--value"
                  >
                    <div
                      className="Select-placeholder"
                    >
                      Grade...
                    </div>
                    <div
                      className="Select-input"
                      style={
                        {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-activedescendant="react-select-49--value"
                        aria-expanded="false"
                        aria-haspopup="false"
                        aria-owns=""
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        style={
                          {
                            "boxSizing": "content-box",
                            "width": "5px",
                          }
                        }
                        value=""
                      />
                      <div
                        style={
                          {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            className="FilterBar"
            style={
              {
                "display": "flex",
                "justifyContent": "center",
              }
            }
          >
            <div
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <span
                style={
                  {
                    "display": "inline-block",
                    "marginRight": 10,
                  }
                }
              >
                Filter by
              </span>
              <div
                className="Select has-value Select--single"
              >
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    {
                      "marginLeft": 10,
                      "width": "10em",
                    }
                  }
                >
                  <div
                    className="Select-multi-value-wrapper"
                    id="react-select-50--value"
                  >
                    <div
                      className="Select-value"
                    >
                      <span
                        aria-selected="true"
                        className="Select-value-label"
                        id="react-select-50--value-item"
                        role="option"
                      >
                        Last 45 days
                      </span>
                    </div>
                    <div
                      aria-activedescendant="react-select-50--value"
                      aria-disabled="false"
                      aria-expanded={false}
                      aria-owns=""
                      className="Select-input"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      role="combobox"
                      style={
                        {
                          "border": 0,
                          "display": "inline-block",
                          "width": 1,
                        }
                      }
                      tabIndex={0}
                    />
                  </div>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            {
              "display": "flex",
              "flex": "1",
              "padding": 10,
            }
          }
        >
          <div
            style={
              {
                "alignContent": "flex-start",
                "display": "flex",
                "width": 450,
              }
            }
          >
            <div
              className="StudentsTable"
              style={
                {
                  "display": "flex",
                  "flex": 1,
                  "flexDirection": "column",
                  "marginBottom": 10,
                  "marginTop": 10,
                }
              }
            >
              <div
                style={
                  {
                    "flex": 1,
                  }
                }
              />
              <div
                style={
                  {
                    "paddingTop": 10,
                  }
                }
              >
                Total Incidents:  1
              </div>
            </div>
          </div>
          <div
            style={
              {
                "display": "flex",
                "flex": "1",
                "flexDirection": "column",
                "paddingLeft": 20,
              }
            }
          >
            <div
              style={
                {
                  "display": "flex",
                  "justifyContent": "center",
                  "marginTop": "20px",
                }
              }
            >
              <div
                style={
                  {
                    "alignSelf": "center",
                    "fontSize": "18px",
                    "marginRight": "10px",
                  }
                }
              >
                Break down by:
              </div>
              <div
                className="Select has-value is-searchable Select--single"
              >
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    {
                      "width": "200px",
                    }
                  }
                >
                  <div
                    className="Select-multi-value-wrapper"
                    id="react-select-51--value"
                  >
                    <div
                      className="Select-value"
                    >
                      <span
                        aria-selected="true"
                        className="Select-value-label"
                        id="react-select-51--value-item"
                        role="option"
                      >
                        Day & Time
                      </span>
                    </div>
                    <div
                      className="Select-input"
                      style={
                        {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-activedescendant="react-select-51--value"
                        aria-expanded="false"
                        aria-haspopup="false"
                        aria-owns=""
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        style={
                          {
                            "boxSizing": "content-box",
                            "width": "5px",
                          }
                        }
                        value=""
                      />
                      <div
                        style={
                          {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              className="DisciplineScatterPlot"
              id="String"
              style={
                {
                  "display": "flex",
                  "flex": 1,
                  "padding": 10,
                  "width": "100%",
                }
              }
            >
              <div
                className="HighchartsWrapper"
                style={
                  {
                    "flex": 1,
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshots works for new_bedford 1`] = `
<div
  style={
    {
      "background": "#333",
      "width": "100%",
    }
  }
>
  <div
    style={
      {
        "background": "white",
        "border": "5px solid #333",
        "display": "flex",
        "flexDirection": "column",
        "height": 768,
        "width": 1024,
      }
    }
  >
    <div
      className="SchoolDisciplineDashboard EscapeListener"
      onKeyDown={[Function]}
      style={
        {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <div
        style={
          {
            "display": "flex",
            "flex": 1,
            "flexDirection": "column",
            "paddingLeft": 10,
            "paddingRight": 10,
            "width": "100%",
          }
        }
      >
        <div
          className="SectionHeading"
          style={
            {
              "borderBottom": "1px solid #333",
              "padding": 10,
            }
          }
        >
          <h4
            style={
              {
                "color": "black",
                "display": "inline",
              }
            }
          >
            Recent Discipline incidents at 
            Arthur D. Healey
          </h4>
        </div>
        <div
          style={
            {
              "borderBottom": "1px solid #ccc",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "padding": 10,
              "width": "100%",
            }
          }
        >
          <div
            className="FilterBar"
            style={
              {
                "display": "flex",
                "justifyContent": "center",
              }
            }
          >
            <div
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <span
                style={
                  {
                    "display": "inline-block",
                    "marginRight": 10,
                  }
                }
              >
                Filter by
              </span>
              <div
                className="Select is-searchable Select--single"
              >
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    {
                      "marginLeft": 10,
                      "width": "10em",
                    }
                  }
                >
                  <div
                    className="Select-multi-value-wrapper"
                    id="react-select-56--value"
                  >
                    <div
                      className="Select-placeholder"
                    >
                      Incident Code...
                    </div>
                    <div
                      className="Select-input"
                      style={
                        {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-activedescendant="react-select-56--value"
                        aria-expanded="false"
                        aria-haspopup="false"
                        aria-owns=""
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        style={
                          {
                            "boxSizing": "content-box",
                            "width": "5px",
                          }
                        }
                        value=""
                      />
                      <div
                        style={
                          {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
              <div
                className="Select is-searchable Select--single"
              >
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    {
                      "marginLeft": 10,
                      "width": "8em",
                    }
                  }
                >
                  <div
                    className="Select-multi-value-wrapper"
                    id="react-select-57--value"
                  >
                    <div
                      className="Select-placeholder"
                    >
                      Grade...
                    </div>
                    <div
                      className="Select-input"
                      style={
                        {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-activedescendant="react-select-57--value"
                        aria-expanded="false"
                        aria-haspopup="false"
                        aria-owns=""
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        style={
                          {
                            "boxSizing": "content-box",
                            "width": "5px",
                          }
                        }
                        value=""
                      />
                      <div
                        style={
                          {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            className="FilterBar"
            style={
              {
                "display": "flex",
                "justifyContent": "center",
              }
            }
          >
            <div
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <span
                style={
                  {
                    "display": "inline-block",
                    "marginRight": 10,
                  }
                }
              >
                Filter by
              </span>
              <div
                className="Select has-value Select--single"
              >
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    {
                      "marginLeft": 10,
                      "width": "10em",
                    }
                  }
                >
                  <div
                    className="Select-multi-value-wrapper"
                    id="react-select-58--value"
                  >
                    <div
                      className="Select-value"
                    >
                      <span
                        aria-selected="true"
                        className="Select-value-label"
                        id="react-select-58--value-item"
                        role="option"
                      >
                        Last 45 days
                      </span>
                    </div>
                    <div
                      aria-activedescendant="react-select-58--value"
                      aria-disabled="false"
                      aria-expanded={false}
                      aria-owns=""
                      className="Select-input"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      role="combobox"
                      style={
                        {
                          "border": 0,
                          "display": "inline-block",
                          "width": 1,
                        }
                      }
                      tabIndex={0}
                    />
                  </div>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            {
              "display": "flex",
              "flex": "1",
              "padding": 10,
            }
          }
        >
          <div
            style={
              {
                "alignContent": "flex-start",
                "display": "flex",
                "width": 450,
              }
            }
          >
            <div
              className="StudentsTable"
              style={
                {
                  "display": "flex",
                  "flex": 1,
                  "flexDirection": "column",
                  "marginBottom": 10,
                  "marginTop": 10,
                }
              }
            >
              <div
                style={
                  {
                    "flex": 1,
                  }
                }
              />
              <div
                style={
                  {
                    "paddingTop": 10,
                  }
                }
              >
                Total Incidents:  1
              </div>
            </div>
          </div>
          <div
            style={
              {
                "display": "flex",
                "flex": "1",
                "flexDirection": "column",
                "paddingLeft": 20,
              }
            }
          >
            <div
              style={
                {
                  "display": "flex",
                  "justifyContent": "center",
                  "marginTop": "20px",
                }
              }
            >
              <div
                style={
                  {
                    "alignSelf": "center",
                    "fontSize": "18px",
                    "marginRight": "10px",
                  }
                }
              >
                Break down by:
              </div>
              <div
                className="Select has-value is-searchable Select--single"
              >
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    {
                      "width": "200px",
                    }
                  }
                >
                  <div
                    className="Select-multi-value-wrapper"
                    id="react-select-59--value"
                  >
                    <div
                      className="Select-value"
                    >
                      <span
                        aria-selected="true"
                        className="Select-value-label"
                        id="react-select-59--value-item"
                        role="option"
                      >
                        Day & Time
                      </span>
                    </div>
                    <div
                      className="Select-input"
                      style={
                        {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-activedescendant="react-select-59--value"
                        aria-expanded="false"
                        aria-haspopup="false"
                        aria-owns=""
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        style={
                          {
                            "boxSizing": "content-box",
                            "width": "5px",
                          }
                        }
                        value=""
                      />
                      <div
                        style={
                          {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              className="DisciplineScatterPlot"
              id="String"
              style={
                {
                  "display": "flex",
                  "flex": 1,
                  "padding": 10,
                  "width": "100%",
                }
              }
            >
              <div
                className="HighchartsWrapper"
                style={
                  {
                    "flex": 1,
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`snapshots works for somerville 1`] = `
<div
  style={
    {
      "background": "#333",
      "width": "100%",
    }
  }
>
  <div
    style={
      {
        "background": "white",
        "border": "5px solid #333",
        "display": "flex",
        "flexDirection": "column",
        "height": 768,
        "width": 1024,
      }
    }
  >
    <div
      className="SchoolDisciplineDashboard EscapeListener"
      onKeyDown={[Function]}
      style={
        {
          "display": "flex",
          "flex": 1,
          "flexDirection": "column",
          "width": "100%",
        }
      }
    >
      <div
        style={
          {
            "display": "flex",
            "flex": 1,
            "flexDirection": "column",
            "paddingLeft": 10,
            "paddingRight": 10,
            "width": "100%",
          }
        }
      >
        <div
          className="SectionHeading"
          style={
            {
              "borderBottom": "1px solid #333",
              "padding": 10,
            }
          }
        >
          <h4
            style={
              {
                "color": "black",
                "display": "inline",
              }
            }
          >
            Recent Discipline incidents at 
            Arthur D. Healey
          </h4>
        </div>
        <div
          style={
            {
              "borderBottom": "1px solid #ccc",
              "display": "flex",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "padding": 10,
              "width": "100%",
            }
          }
        >
          <div
            className="FilterBar"
            style={
              {
                "display": "flex",
                "justifyContent": "center",
              }
            }
          >
            <div
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <span
                style={
                  {
                    "display": "inline-block",
                    "marginRight": 10,
                  }
                }
              >
                Filter by
              </span>
              <div
                className="Select is-searchable Select--single"
              >
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    {
                      "marginLeft": 10,
                      "width": "10em",
                    }
                  }
                >
                  <div
                    className="Select-multi-value-wrapper"
                    id="react-select-52--value"
                  >
                    <div
                      className="Select-placeholder"
                    >
                      Incident Code...
                    </div>
                    <div
                      className="Select-input"
                      style={
                        {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-activedescendant="react-select-52--value"
                        aria-expanded="false"
                        aria-haspopup="false"
                        aria-owns=""
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        style={
                          {
                            "boxSizing": "content-box",
                            "width": "5px",
                          }
                        }
                        value=""
                      />
                      <div
                        style={
                          {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
              <div
                className="Select is-searchable Select--single"
              >
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    {
                      "marginLeft": 10,
                      "width": "8em",
                    }
                  }
                >
                  <div
                    className="Select-multi-value-wrapper"
                    id="react-select-53--value"
                  >
                    <div
                      className="Select-placeholder"
                    >
                      Grade...
                    </div>
                    <div
                      className="Select-input"
                      style={
                        {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-activedescendant="react-select-53--value"
                        aria-expanded="false"
                        aria-haspopup="false"
                        aria-owns=""
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        style={
                          {
                            "boxSizing": "content-box",
                            "width": "5px",
                          }
                        }
                        value=""
                      />
                      <div
                        style={
                          {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            className="FilterBar"
            style={
              {
                "display": "flex",
                "justifyContent": "center",
              }
            }
          >
            <div
              style={
                {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <span
                style={
                  {
                    "display": "inline-block",
                    "marginRight": 10,
                  }
                }
              >
                Filter by
              </span>
              <div
                className="Select has-value Select--single"
              >
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    {
                      "marginLeft": 10,
                      "width": "10em",
                    }
                  }
                >
                  <div
                    className="Select-multi-value-wrapper"
                    id="react-select-54--value"
                  >
                    <div
                      className="Select-value"
                    >
                      <span
                        aria-selected="true"
                        className="Select-value-label"
                        id="react-select-54--value-item"
                        role="option"
                      >
                        Last 45 days
                      </span>
                    </div>
                    <div
                      aria-activedescendant="react-select-54--value"
                      aria-disabled="false"
                      aria-expanded={false}
                      aria-owns=""
                      className="Select-input"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      role="combobox"
                      style={
                        {
                          "border": 0,
                          "display": "inline-block",
                          "width": 1,
                        }
                      }
                      tabIndex={0}
                    />
                  </div>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style={
            {
              "display": "flex",
              "flex": "1",
              "padding": 10,
            }
          }
        >
          <div
            style={
              {
                "alignContent": "flex-start",
                "display": "flex",
                "width": 450,
              }
            }
          >
            <div
              className="StudentsTable"
              style={
                {
                  "display": "flex",
                  "flex": 1,
                  "flexDirection": "column",
                  "marginBottom": 10,
                  "marginTop": 10,
                }
              }
            >
              <div
                style={
                  {
                    "flex": 1,
                  }
                }
              />
              <div
                style={
                  {
                    "paddingTop": 10,
                  }
                }
              >
                Total Incidents:  1
              </div>
            </div>
          </div>
          <div
            style={
              {
                "display": "flex",
                "flex": "1",
                "flexDirection": "column",
                "paddingLeft": 20,
              }
            }
          >
            <div
              style={
                {
                  "display": "flex",
                  "justifyContent": "center",
                  "marginTop": "20px",
                }
              }
            >
              <div
                style={
                  {
                    "alignSelf": "center",
                    "fontSize": "18px",
                    "marginRight": "10px",
                  }
                }
              >
                Break down by:
              </div>
              <div
                className="Select has-value is-searchable Select--single"
              >
                <div
                  className="Select-control"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    {
                      "width": "200px",
                    }
                  }
                >
                  <div
                    className="Select-multi-value-wrapper"
                    id="react-select-55--value"
                  >
                    <div
                      className="Select-value"
                    >
                      <span
                        aria-selected="true"
                        className="Select-value-label"
                        id="react-select-55--value-item"
                        role="option"
                      >
                        Day & Time
                      </span>
                    </div>
                    <div
                      className="Select-input"
                      style={
                        {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-activedescendant="react-select-55--value"
                        aria-expanded="false"
                        aria-haspopup="false"
                        aria-owns=""
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        role="combobox"
                        style={
                          {
                            "boxSizing": "content-box",
                            "width": "5px",
                          }
                        }
                        value=""
                      />
                      <div
                        style={
                          {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                  <span
                    className="Select-arrow-zone"
                    onMouseDown={[Function]}
                  >
                    <span
                      className="Select-arrow"
                      onMouseDown={[Function]}
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              className="DisciplineScatterPlot"
              id="String"
              style={
                {
                  "display": "flex",
                  "flex": 1,
                  "padding": 10,
                  "width": "100%",
                }
              }
            >
              <div
                className="HighchartsWrapper"
                style={
                  {
                    "flex": 1,
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
